fix(bug): Removed extra space from Select Mission Runtime step

--- a/src/assets/stylesheets/shared/_cards.less
+++ b/src/assets/stylesheets/shared/_cards.less
@@ -19,7 +19,7 @@
         min-height: 550px;
       }
       &--large {
-        min-height: 860px;
+        min-height: 500px;
       }
       &-title {
         display: inline-flex;
